Slide puzzle Correction bug mineur

--- a/index.html
+++ b/index.html
@@ -368,6 +368,11 @@
 			var endTxtOrdi = document.getElementById("winOrLoseOrdi");
 			endTxtOrdi.innerHTML = " ";
 
+			var notifPaireTel = document.getElementById("notifPaireTel");
+			notifPaireTel.innerHTML = " ";
+			var notifPaireOrdi = document.getElementById("notifPaireOrdi");
+			notifPaireOrdi.innerHTML = " ";
+
 			main();
 
 			location.href = "#top"; 
