Memory Correction de bug visuel

--- a/index.html
+++ b/index.html
@@ -370,8 +370,10 @@
 
 			var notifPaireTel = document.getElementById("notifPaireTel");
 			notifPaireTel.innerHTML = " ";
+			notifPaireTel.style.backgroundColor = "transparent";
 			var notifPaireOrdi = document.getElementById("notifPaireOrdi");
 			notifPaireOrdi.innerHTML = " ";
+			notifPaireOrdi.style.backgroundColor = "transparent";
 
 			main();
 
