Memory Correction bug Responsive

--- a/index.html
+++ b/index.html
@@ -419,8 +419,7 @@
 		}
 
 		body{
-
-			height:100vh;
+			height: 100vh;
 			display: flex;
 			flex-direction: column;
 			margin: 0;
@@ -632,6 +631,12 @@
 				font-size: 210%;
 
 			}
+
+			body{
+
+				height: auto;
+
+			}
 		}
 
 		@media screen and (max-width: 1024px){
@@ -737,11 +742,23 @@
 				font-size: 160%;
 
 			}
+
+			body{
+
+				height: auto;
+
+			}
 		}
 
 
 
 		@media screen and (max-width: 768px){
+
+			body{
+
+				height: auto;
+
+			}
 
 			h1{
 
